--- a/code/java/practice/pom.xml
+++ b/code/java/practice/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.zhouyanqing</groupId>
-  <artifactId>JavaLearn</artifactId>
+  <groupId>com.practice</groupId>
+  <artifactId>practice</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>JavaLearn</name>
+  <name>practice</name>
   <url>http://maven.apache.org</url>
 
   <properties>
