--- a/code/java/practice/pom.xml
+++ b/code/java/practice/pom.xml
@@ -65,6 +65,12 @@
       <version>2.1.v20100127</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+
   </dependencies>
 
   <build>
