add jetty filter

--- a/code/java/practice/base/src/main/webapp/WEB-INF/web.xml
+++ b/code/java/practice/base/src/main/webapp/WEB-INF/web.xml
@@ -14,4 +14,22 @@
     <url-pattern>/hello/*</url-pattern>
   </servlet-mapping>
 
+  <filter>
+    <filter-name>Demo1Filter</filter-name>
+    <filter-class>jetty.Demo1Filter</filter-class>
+    <init-param>
+      <param-name>param1</param-name>
+      <param-value>value在这里呢</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>Demo1Filter</filter-name>
+    <url-pattern>/*</url-pattern>
+    <dispatcher>REQUEST</dispatcher> <!-- 没有配置dispatcher就是默认request方式的 -->
+    <dispatcher>FORWARD</dispatcher>
+    <dispatcher>ERROR</dispatcher>
+    <dispatcher>INCLUDE</dispatcher>
+  </filter-mapping>
+
+
 </web-app>
