--- a/code/java/practice/base/pom.xml
+++ b/code/java/practice/base/pom.xml
@@ -84,6 +84,13 @@
       <version>59.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.5</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
