--- a/code/java/practice/base/pom.xml
+++ b/code/java/practice/base/pom.xml
@@ -90,6 +90,12 @@
       <version>42.2.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.glassfish.hk2</groupId>
+      <artifactId>hk2</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+
 
   </dependencies>
 
