--- a/code/java/practice/base/pom.xml
+++ b/code/java/practice/base/pom.xml
@@ -96,6 +96,12 @@
       <version>2.3.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>27.0.1-jre</version>
+    </dependency>
+
 
   </dependencies>
 
