--- a/code/java/practice/base/.gitignore
+++ b/code/java/practice/base/.gitignore
@@ -33,3 +33,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties  
 crashlytics-build.properties  
 fabric.properties  
+/logs/log.log.2020-04-15
