--- a/code/java/practice/base/.gitignore
+++ b/code/java/practice/base/.gitignore
@@ -32,5 +32,5 @@ atlassian-ide-plugin.xml
 com_crashlytics_export_strings.xml  
 crashlytics.properties  
 crashlytics-build.properties  
-fabric.properties  
-/logs/log.log.2020-04-15
+fabric.properties
+/logs/*.*
