--- a/code/java/practice/base/pom.xml
+++ b/code/java/practice/base/pom.xml
@@ -175,5 +175,14 @@
                 <version>${jettyVersion}</version>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/webapp/</directory>
+                <targetPath>webapp</targetPath>
+            </resource>
+            <resource>
+                <directory>src/main/resources/</directory>
+            </resource>
+        </resources>
     </build>
 </project>
