--- a/code/java/practice/base/src/main/resources/db_server.properties
+++ b/code/java/practice/base/src/main/resources/db_server.properties
@@ -1,5 +1,5 @@
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/vhr?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 username=root
 password=zaq12345
 filters=stat
