--- a/code/java/practice/base/pom.xml
+++ b/code/java/practice/base/pom.xml
@@ -165,6 +165,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.3.7</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
