--- a/code/java/practice/base/pom.xml
+++ b/code/java/practice/base/pom.xml
@@ -171,6 +171,13 @@
             <version>5.3.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.2</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
