--- a/code/java/practice/base/pom.xml
+++ b/code/java/practice/base/pom.xml
@@ -157,6 +157,11 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
